--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ FetchContent_MakeAvailable(SFML)
 
 add_executable(SurvivOps src/main.cpp src/handler.cpp src/state.cpp src/player.cpp)
 target_compile_features(SurvivOps PRIVATE cxx_std_17)
+target_include_directories(SurvivOps PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(SurvivOps PRIVATE SFML::Graphics)
